--- a/src/pages/Home/Carousel/index.scss
+++ b/src/pages/Home/Carousel/index.scss
@@ -1,4 +1,4 @@
-@import "../../";
+@import "../../../";
 
 // SplideJs
 @import "@splidejs/react-splide/css";
@@ -33,9 +33,38 @@
         }
 
         a {
+          width: fit-content;
+          margin-top: 15px;
+          padding: 12px 25px;
+          background-color: $Cyan;
+          border-radius: 45px;
+          text-decoration: none;
           color: $White;
+          transition: .2s;
+
+          &:hover{
+            background-color: darken($Cyan, 10);
+          }
         }
       }
     }
   }
+}
+
+@media only screen and (max-width: 900px) {
+.Carousel{
+  .splide{
+    .slide{
+      .content{
+        h1{
+          font-size: 40px;
+        }
+
+        p{
+          max-width: 100vw;
+        }
+      }
+    }
+  }
+}
 }
