--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,8 @@ $GreenZap: #6acd47;
 // VARIABLES
 @mixin DivFlex {
   display: flex;
-  width: 1225px;
+  max-width: 1225px;
+  width: 100%;
   margin: auto;
   padding: 0 30px;
 }
