arrumei o bug do carousel

--- a/src/pages/Home/Carousel/index.scss
+++ b/src/pages/Home/Carousel/index.scss
@@ -12,17 +12,6 @@
     .slide {
       display: flex;
       height: calc(95vh - 100px);
-      backdrop-filter: aqua;
-
-      &#slide-2{
-        .content {
-          align-items: end;
-
-          h1, p{
-            text-align: right
-          }
-        }
-      }
 
       .content {
         @include DivFlex;
@@ -57,6 +46,16 @@
           }
         }
       }
+
+      &.slide-2{        
+        .content {
+          align-items: end;
+
+          h1, p{
+            text-align: right
+          }
+        }
+      }
     }
   }
 }
@@ -65,7 +64,7 @@
 .Carousel{
   .splide{
     .slide{
-      &#slide-2{
+      &.slide-2{
         .content {
           align-items: start;
 
